[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Main/Currency.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Main/MainScreen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Upgrades/Upgrades.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Shop/Shop.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.129412, 0.129412, 0.129412, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.407843, 0.164706, 0.164706, 1 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Misc/Font/Raleway-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 65
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Misc/Font/Raleway-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.505882, 0.419608, 0.419608, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.541176, 0.298039, 0.298039, 1 )

[node name="Screen" type="Panel"]
pause_mode = 1
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 389, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 650.0, 1270.0 ]
}

[node name="TopBar" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 250.0
custom_styles/panel = SubResource( 2 )

[node name="Currency" type="Label" parent="TopBar" groups=["SaveNode"]]
margin_left = 650.0
margin_top = 35.0
margin_right = 1270.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 9 )
text = "Currency"
align = 1
valign = 1
script = ExtResource( 1 )

[node name="Currency2" type="Label" parent="TopBar"]
margin_left = 650.0
margin_top = 160.0
margin_right = 1270.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 4 )
text = "Currency/s"
align = 1
valign = 1

[node name="Plot" type="Button" parent="TopBar"]
margin_left = 1770.0
margin_right = 1920.0
margin_bottom = 150.0
text = "Plot"

[node name="ClickerDisplay" type="Panel" parent="."]
margin_left = 650.0
margin_top = 250.0
margin_right = 1270.0
margin_bottom = 880.0
custom_styles/panel = SubResource( 5 )

[node name="Clicker" type="Button" parent="ClickerDisplay"]
margin_left = 135.0
margin_top = 225.0
margin_right = 485.0
margin_bottom = 425.0
text = "Click!"

[node name="LeftBuildings" type="Panel" parent="."]
margin_top = 250.0
margin_right = 650.0
margin_bottom = 880.0
custom_styles/panel = SubResource( 6 )

[node name="1" type="Panel" parent="LeftBuildings"]
margin_right = 650.0
margin_bottom = 100.0

[node name="2" type="Panel" parent="LeftBuildings"]
margin_top = 100.0
margin_right = 650.0
margin_bottom = 200.0

[node name="3" type="Panel" parent="LeftBuildings"]
margin_top = 200.0
margin_right = 650.0
margin_bottom = 300.0

[node name="4" type="Panel" parent="LeftBuildings"]
margin_top = 300.0
margin_right = 650.0
margin_bottom = 400.0

[node name="Cnt" type="Panel" parent="LeftBuildings"]
margin_top = 400.0
margin_right = 650.0
margin_bottom = 630.0

[node name="RightBuildings" type="Panel" parent="."]
margin_left = 1270.0
margin_top = 250.0
margin_right = 1920.0
margin_bottom = 880.0
custom_styles/panel = SubResource( 6 )

[node name="1" type="Panel" parent="RightBuildings"]
margin_right = 650.0
margin_bottom = 100.0

[node name="2" type="Panel" parent="RightBuildings"]
margin_top = 100.0
margin_right = 650.0
margin_bottom = 200.0

[node name="3" type="Panel" parent="RightBuildings"]
margin_top = 200.0
margin_right = 650.0
margin_bottom = 300.0

[node name="4" type="Panel" parent="RightBuildings"]
margin_top = 300.0
margin_right = 650.0
margin_bottom = 400.0

[node name="Cnt" type="Panel" parent="RightBuildings"]
margin_top = 400.0
margin_right = 650.0
margin_bottom = 630.0

[node name="BottomBar" type="Panel" parent="."]
margin_top = 880.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = SubResource( 7 )

[node name="Upgrades" type="Button" parent="BottomBar"]
margin_left = 790.0
margin_right = 1140.0
margin_bottom = 200.0
text = "Upgrades"

[node name="Achievements" type="Button" parent="BottomBar"]
margin_left = 1275.0
margin_right = 1625.0
margin_bottom = 200.0
text = "Achievements"

[node name="Buildings" type="Button" parent="BottomBar"]
margin_left = 350.0
margin_right = 700.0
margin_bottom = 200.0
text = "Buildings"

[node name="Shop" parent="." groups=["SaveNode"] instance=ExtResource( 4 )]
visible = false
margin_left = 348.0
margin_top = 160.0
margin_right = 1948.0
margin_bottom = 1060.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="UpgradeTab" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 348.0
margin_top = 160.0
margin_right = 1948.0
margin_bottom = 1060.0
rect_scale = Vector2( 0.8, 0.8 )

[connection signal="pressed" from="ClickerDisplay/Clicker" to="TopBar/Currency" method="_on_Clicker_pressed"]
[connection signal="pressed" from="BottomBar/Upgrades" to="." method="_on_Upgrades_pressed"]
[connection signal="pressed" from="BottomBar/Buildings" to="." method="_on_Buildings_pressed"]
